Fix display on tablet

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -16,3 +16,4 @@ $small-device-height: 900px;
 // Desktop: from 1280x720 to 2560x1440
 $mobile-device-min-width: 359px;
 $mobile-device-max-width: 431px;
+$tablet-max-width: 1281px;
